# socialai

./: CLAUDE.md  README.md  pyproject.toml
experiments/: README.md
experiments/01_chit_chat_filter/: README.md  annotate.py  run.py  score.py
experiments/02_anthropomorphic_judge/: README.md  run.py
src/pipeline/: anthropomorphic.py  chit_chat.py  judge.py
