[project]
name = "allegro"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.2",
    "pyyaml>=6.0",
    "wandb>=0.16",
    "vllm==0.11.2",
    "datasets>=3.0",
    "transformers>=4.40,<5.0",
    "openai>=1.0",
    "tqdm>=4.60",
    "streamlit>=1.30",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allegro", "src/pipeline"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
